TestRepo2/src/objects/Published_Recipe__c.object
<CustomObject>
    <description>Junction object between Digital Published Asset &amp; Recipe</description>
    <fields>
        <fullName>Digital_Published_Asset__c</fullName>
        <label>Digital Published Asset</label>
        <referenceTo>Digital_Published_Asset__c</referenceTo>
        <relationshipLabel>Published Recipes</relationshipLabel>
        <relationshipName>Published_Recipes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Recipe__c</fullName>
        <label>Recipe</label>
        <referenceTo>Recipe__c</referenceTo>
        <relationshipLabel>Asset - Recipe Use</relationshipLabel>
        <relationshipName>Published_Recipes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suppressed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Published Recipe</label>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>Published Recipe Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Published Recipes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>